bnfc/UTP/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from UTP/Par.y
-----------------------------------------------------------------------------

state 6 contains 4 reduce/reduce conflicts.
state 26 contains 1 reduce/reduce conflicts.
state 72 contains 2 reduce/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pTheory -> Theory                           (0)
	%start_pPred -> Pred                               (1)
	%start_pExp -> Exp                                 (2)
	%start_pType -> Type                               (3)
	Integer -> L_integ                                 (4)
	DynVar -> L_DynVar                                 (5)
	Theory -> 'Theory' DynVar '.' ListDynVar '.' ListItem   (6)
	ListDynVar ->                                      (7)
	ListDynVar -> DynVar ListDynVar                    (8)
	Item -> 'DclVar' VarClass DynVar '.' VarRole '.'   (9)
	Item -> 'DclDLVar' VarClass DynVar '.' ListDynVar '.'   (10)
	Item -> 'DclASet' VarClass DynVar '.'              (11)
	Item -> 'Conjecture' DynVar '.' Pred '.'           (12)
	Item -> 'Law' LawType DynVar '.' Pred '.'          (13)
	VarRole -> 'var' SBBL Type                         (14)
	VarClass -> 'Obs'                                  (15)
	VarClass -> 'Exp'                                  (16)
	VarClass -> 'Prd'                                  (17)
	SBBL -> 'NA'                                       (18)
	SBBL -> 'SB'                                       (19)
	SBBL -> 'NS'                                       (20)
	LawType -> 'axiom'                                 (21)
	LawType -> 'proven'                                (22)
	LawType -> 'assumed'                               (23)
	ListItem ->                                        (24)
	ListItem -> Item ListItem                          (25)
	Pred -> Pred '===' Pred1                           (26)
	Pred -> Pred1                                      (27)
	Pred1 -> Pred2 '==>' Pred1                         (28)
	Pred1 -> Pred2                                     (29)
	Pred2 -> Pred2 '\\/' Pred3                         (30)
	Pred2 -> Pred3                                     (31)
	Pred3 -> Pred3 '/\\' Pred4                         (32)
	Pred3 -> '~' Pred4                                 (33)
	Pred3 -> Pred4                                     (34)
	Pred4 -> Exp '==' Exp                              (35)
	Pred4 -> Exp '!=' Exp                              (36)
	Pred4 -> Exp '<' Exp                               (37)
	Pred4 -> Exp '<=' Exp                              (38)
	Pred4 -> Exp '>' Exp                               (39)
	Pred4 -> Exp '>=' Exp                              (40)
	Pred4 -> 'True'                                    (41)
	Pred4 -> 'False'                                   (42)
	Pred4 -> DynVar                                    (43)
	Pred4 -> Pred5                                     (44)
	Pred5 -> DynVar '(.' ListPred '.)'                 (45)
	Pred5 -> Pred6                                     (46)
	Pred6 -> '(' Pred ')'                              (47)
	ListPred ->                                        (48)
	ListPred -> Pred                                   (49)
	ListPred -> Pred ',' ListPred                      (50)
	Exp -> Exp1 '++' Exp                               (51)
	Exp -> Exp1 ':' Exp                                (52)
	Exp -> Exp1                                        (53)
	Exp1 -> Exp1 '+' Exp2                              (54)
	Exp1 -> Exp1 '-' Exp2                              (55)
	Exp1 -> Exp2                                       (56)
	Exp2 -> Exp2 '*' Exp3                              (57)
	Exp2 -> Exp2 'div' Exp3                            (58)
	Exp2 -> Exp2 'mod' Exp3                            (59)
	Exp2 -> 'neg' Exp3                                 (60)
	Exp2 -> Exp3                                       (61)
	Exp3 -> Integer                                    (62)
	Exp3 -> DynVar                                     (63)
	Exp3 -> 'true'                                     (64)
	Exp3 -> 'false'                                    (65)
	Exp3 -> 'nil'                                      (66)
	Exp3 -> DynVar '(' ListExp ')'                     (67)
	Exp3 -> '(' Exp ')'                                (68)
	ListExp ->                                         (69)
	ListExp -> Exp                                     (70)
	ListExp -> Exp ',' ListExp                         (71)
	Type -> Type1 '->' Type                            (72)
	Type -> Type1                                      (73)
	Type1 -> DynVar '(:' ListType2 ':)'                (74)
	Type1 -> Type2                                     (75)
	Type2 -> DynVar ListType3                          (76)
	Type2 -> Type3                                     (77)
	Type3 -> 'ttop'                                    (78)
	Type3 -> DynVar                                    (79)
	Type3 -> 'tbot'                                    (80)
	Type3 -> '(' Type ')'                              (81)
	ListType2 ->                                       (82)
	ListType2 -> Type2                                 (83)
	ListType2 -> Type2 '|' ListType2                   (84)
	ListType3 ->                                       (85)
	ListType3 -> Type3 ListType3                       (86)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'('            { PT _ (TS _ 2) }
	'(.'           { PT _ (TS _ 3) }
	'(:'           { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	'*'            { PT _ (TS _ 6) }
	'+'            { PT _ (TS _ 7) }
	'++'           { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'->'           { PT _ (TS _ 11) }
	'.'            { PT _ (TS _ 12) }
	'.)'           { PT _ (TS _ 13) }
	'/\\'          { PT _ (TS _ 14) }
	':'            { PT _ (TS _ 15) }
	':)'           { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'=='           { PT _ (TS _ 19) }
	'==='          { PT _ (TS _ 20) }
	'==>'          { PT _ (TS _ 21) }
	'>'            { PT _ (TS _ 22) }
	'>='           { PT _ (TS _ 23) }
	'Conjecture'   { PT _ (TS _ 24) }
	'DclASet'      { PT _ (TS _ 25) }
	'DclDLVar'     { PT _ (TS _ 26) }
	'DclVar'       { PT _ (TS _ 27) }
	'Exp'          { PT _ (TS _ 28) }
	'False'        { PT _ (TS _ 29) }
	'Law'          { PT _ (TS _ 30) }
	'NA'           { PT _ (TS _ 31) }
	'NS'           { PT _ (TS _ 32) }
	'Obs'          { PT _ (TS _ 33) }
	'Prd'          { PT _ (TS _ 34) }
	'SB'           { PT _ (TS _ 35) }
	'Theory'       { PT _ (TS _ 36) }
	'True'         { PT _ (TS _ 37) }
	'\\/'          { PT _ (TS _ 38) }
	'assumed'      { PT _ (TS _ 39) }
	'axiom'        { PT _ (TS _ 40) }
	'div'          { PT _ (TS _ 41) }
	'false'        { PT _ (TS _ 42) }
	'mod'          { PT _ (TS _ 43) }
	'neg'          { PT _ (TS _ 44) }
	'nil'          { PT _ (TS _ 45) }
	'proven'       { PT _ (TS _ 46) }
	'tbot'         { PT _ (TS _ 47) }
	'true'         { PT _ (TS _ 48) }
	'ttop'         { PT _ (TS _ 49) }
	'var'          { PT _ (TS _ 50) }
	'|'            { PT _ (TS _ 51) }
	'~'            { PT _ (TS _ 52) }
	L_integ        { PT _ (TI $$) }
	L_DynVar       { PT _ (T_DynVar $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pTheory  rule  0
	%start_pPred    rule  1
	%start_pExp     rule  2
	%start_pType    rule  3
	Integer         rule  4
	DynVar          rule  5
	Theory          rule  6
	ListDynVar      rules 7, 8
	Item            rules 9, 10, 11, 12, 13
	VarRole         rule  14
	VarClass        rules 15, 16, 17
	SBBL            rules 18, 19, 20
	LawType         rules 21, 22, 23
	ListItem        rules 24, 25
	Pred            rules 26, 27
	Pred1           rules 28, 29
	Pred2           rules 30, 31
	Pred3           rules 32, 33, 34
	Pred4           rules 35, 36, 37, 38, 39, 40, 41, 42, 43, 44
	Pred5           rules 45, 46
	Pred6           rule  47
	ListPred        rules 48, 49, 50
	Exp             rules 51, 52, 53
	Exp1            rules 54, 55, 56
	Exp2            rules 57, 58, 59, 60, 61
	Exp3            rules 62, 63, 64, 65, 66, 67, 68
	ListExp         rules 69, 70, 71
	Type            rules 72, 73
	Type1           rules 74, 75
	Type2           rules 76, 77
	Type3           rules 78, 79, 80, 81
	ListType2       rules 82, 83, 84
	ListType3       rules 85, 86

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pTheory -> . Theory                          (rule 0)

	'Theory'       shift, and enter state 40

	Theory         goto state 39

State 1

	%start_pPred -> . Pred                              (rule 1)

	'('            shift, and enter state 35
	'False'        shift, and enter state 36
	'True'         shift, and enter state 37
	'false'        shift, and enter state 22
	'neg'          shift, and enter state 23
	'nil'          shift, and enter state 24
	'true'         shift, and enter state 25
	'~'            shift, and enter state 38
	L_integ        shift, and enter state 5
	L_DynVar       shift, and enter state 14

	Integer        goto state 15
	DynVar         goto state 26
	Pred           goto state 27
	Pred1          goto state 28
	Pred2          goto state 29
	Pred3          goto state 30
	Pred4          goto state 31
	Pred5          goto state 32
	Pred6          goto state 33
	Exp            goto state 34
	Exp1           goto state 18
	Exp2           goto state 19
	Exp3           goto state 20

State 2

	%start_pExp -> . Exp                                (rule 2)

	'('            shift, and enter state 21
	'false'        shift, and enter state 22
	'neg'          shift, and enter state 23
	'nil'          shift, and enter state 24
	'true'         shift, and enter state 25
	L_integ        shift, and enter state 5
	L_DynVar       shift, and enter state 14

	Integer        goto state 15
	DynVar         goto state 16
	Exp            goto state 17
	Exp1           goto state 18
	Exp2           goto state 19
	Exp3           goto state 20

State 3

	%start_pType -> . Type                              (rule 3)

	'('            shift, and enter state 11
	'tbot'         shift, and enter state 12
	'ttop'         shift, and enter state 13
	L_DynVar       shift, and enter state 14

	DynVar         goto state 6
	Type           goto state 7
	Type1          goto state 8
	Type2          goto state 9
	Type3          goto state 10

State 4

	Integer -> . L_integ                                (rule 4)

	L_integ        shift, and enter state 5


State 5

	Integer -> L_integ .                                (rule 4)

	'!='           reduce using rule 4
	')'            reduce using rule 4
	'*'            reduce using rule 4
	'+'            reduce using rule 4
	'++'           reduce using rule 4
	','            reduce using rule 4
	'-'            reduce using rule 4
	'.'            reduce using rule 4
	'.)'           reduce using rule 4
	'/\\'          reduce using rule 4
	':'            reduce using rule 4
	'<'            reduce using rule 4
	'<='           reduce using rule 4
	'=='           reduce using rule 4
	'==='          reduce using rule 4
	'==>'          reduce using rule 4
	'>'            reduce using rule 4
	'>='           reduce using rule 4
	'\\/'          reduce using rule 4
	'div'          reduce using rule 4
	'mod'          reduce using rule 4
	%eof           reduce using rule 4


State 6

	Type1 -> DynVar . '(:' ListType2 ':)'               (rule 74)
	Type2 -> DynVar . ListType3                         (rule 76)
	Type3 -> DynVar .                                   (rule 79)

	'('            shift, and enter state 11
	'(:'           shift, and enter state 71
	')'            reduce using rule 85
			(reduce using rule 79)

	'->'           reduce using rule 85
			(reduce using rule 79)

	'.'            reduce using rule 85
			(reduce using rule 79)

	'tbot'         shift, and enter state 12
	'ttop'         shift, and enter state 13
	L_DynVar       shift, and enter state 14
	%eof           reduce using rule 85
			(reduce using rule 79)


	DynVar         goto state 68
	Type3          goto state 69
	ListType3      goto state 70

State 7

	%start_pType -> Type .                              (rule 3)

	%eof           accept


State 8

	Type -> Type1 . '->' Type                           (rule 72)
	Type -> Type1 .                                     (rule 73)

	')'            reduce using rule 73
	'->'           shift, and enter state 67
	'.'            reduce using rule 73
	%eof           reduce using rule 73


State 9

	Type1 -> Type2 .                                    (rule 75)

	')'            reduce using rule 75
	'->'           reduce using rule 75
	'.'            reduce using rule 75
	%eof           reduce using rule 75


State 10

	Type2 -> Type3 .                                    (rule 77)

	')'            reduce using rule 77
	'->'           reduce using rule 77
	'.'            reduce using rule 77
	':)'           reduce using rule 77
	'|'            reduce using rule 77
	%eof           reduce using rule 77


State 11

	Type3 -> '(' . Type ')'                             (rule 81)

	'('            shift, and enter state 11
	'tbot'         shift, and enter state 12
	'ttop'         shift, and enter state 13
	L_DynVar       shift, and enter state 14

	DynVar         goto state 6
	Type           goto state 66
	Type1          goto state 8
	Type2          goto state 9
	Type3          goto state 10

State 12

	Type3 -> 'tbot' .                                   (rule 80)

	'('            reduce using rule 80
	')'            reduce using rule 80
	'->'           reduce using rule 80
	'.'            reduce using rule 80
	':)'           reduce using rule 80
	'tbot'         reduce using rule 80
	'ttop'         reduce using rule 80
	'|'            reduce using rule 80
	L_DynVar       reduce using rule 80
	%eof           reduce using rule 80


State 13

	Type3 -> 'ttop' .                                   (rule 78)

	'('            reduce using rule 78
	')'            reduce using rule 78
	'->'           reduce using rule 78
	'.'            reduce using rule 78
	':)'           reduce using rule 78
	'tbot'         reduce using rule 78
	'ttop'         reduce using rule 78
	'|'            reduce using rule 78
	L_DynVar       reduce using rule 78
	%eof           reduce using rule 78


State 14

	DynVar -> L_DynVar .                                (rule 5)

	'!='           reduce using rule 5
	'('            reduce using rule 5
	'(.'           reduce using rule 5
	'(:'           reduce using rule 5
	')'            reduce using rule 5
	'*'            reduce using rule 5
	'+'            reduce using rule 5
	'++'           reduce using rule 5
	','            reduce using rule 5
	'-'            reduce using rule 5
	'->'           reduce using rule 5
	'.'            reduce using rule 5
	'.)'           reduce using rule 5
	'/\\'          reduce using rule 5
	':'            reduce using rule 5
	':)'           reduce using rule 5
	'<'            reduce using rule 5
	'<='           reduce using rule 5
	'=='           reduce using rule 5
	'==='          reduce using rule 5
	'==>'          reduce using rule 5
	'>'            reduce using rule 5
	'>='           reduce using rule 5
	'\\/'          reduce using rule 5
	'div'          reduce using rule 5
	'mod'          reduce using rule 5
	'tbot'         reduce using rule 5
	'ttop'         reduce using rule 5
	'|'            reduce using rule 5
	L_DynVar       reduce using rule 5
	%eof           reduce using rule 5


State 15

	Exp3 -> Integer .                                   (rule 62)

	'!='           reduce using rule 62
	')'            reduce using rule 62
	'*'            reduce using rule 62
	'+'            reduce using rule 62
	'++'           reduce using rule 62
	','            reduce using rule 62
	'-'            reduce using rule 62
	'.'            reduce using rule 62
	'.)'           reduce using rule 62
	'/\\'          reduce using rule 62
	':'            reduce using rule 62
	'<'            reduce using rule 62
	'<='           reduce using rule 62
	'=='           reduce using rule 62
	'==='          reduce using rule 62
	'==>'          reduce using rule 62
	'>'            reduce using rule 62
	'>='           reduce using rule 62
	'\\/'          reduce using rule 62
	'div'          reduce using rule 62
	'mod'          reduce using rule 62
	%eof           reduce using rule 62


State 16

	Exp3 -> DynVar .                                    (rule 63)
	Exp3 -> DynVar . '(' ListExp ')'                    (rule 67)

	'!='           reduce using rule 63
	'('            shift, and enter state 55
	')'            reduce using rule 63
	'*'            reduce using rule 63
	'+'            reduce using rule 63
	'++'           reduce using rule 63
	','            reduce using rule 63
	'-'            reduce using rule 63
	'.'            reduce using rule 63
	'.)'           reduce using rule 63
	'/\\'          reduce using rule 63
	':'            reduce using rule 63
	'<'            reduce using rule 63
	'<='           reduce using rule 63
	'=='           reduce using rule 63
	'==='          reduce using rule 63
	'==>'          reduce using rule 63
	'>'            reduce using rule 63
	'>='           reduce using rule 63
	'\\/'          reduce using rule 63
	'div'          reduce using rule 63
	'mod'          reduce using rule 63
	%eof           reduce using rule 63


State 17

	%start_pExp -> Exp .                                (rule 2)

	%eof           accept


State 18

	Exp -> Exp1 . '++' Exp                              (rule 51)
	Exp -> Exp1 . ':' Exp                               (rule 52)
	Exp -> Exp1 .                                       (rule 53)
	Exp1 -> Exp1 . '+' Exp2                             (rule 54)
	Exp1 -> Exp1 . '-' Exp2                             (rule 55)

	'!='           reduce using rule 53
	')'            reduce using rule 53
	'+'            shift, and enter state 62
	'++'           shift, and enter state 63
	','            reduce using rule 53
	'-'            shift, and enter state 64
	'.'            reduce using rule 53
	'.)'           reduce using rule 53
	'/\\'          reduce using rule 53
	':'            shift, and enter state 65
	'<'            reduce using rule 53
	'<='           reduce using rule 53
	'=='           reduce using rule 53
	'==='          reduce using rule 53
	'==>'          reduce using rule 53
	'>'            reduce using rule 53
	'>='           reduce using rule 53
	'\\/'          reduce using rule 53
	%eof           reduce using rule 53


State 19

	Exp1 -> Exp2 .                                      (rule 56)
	Exp2 -> Exp2 . '*' Exp3                             (rule 57)
	Exp2 -> Exp2 . 'div' Exp3                           (rule 58)
	Exp2 -> Exp2 . 'mod' Exp3                           (rule 59)

	'!='           reduce using rule 56
	')'            reduce using rule 56
	'*'            shift, and enter state 59
	'+'            reduce using rule 56
	'++'           reduce using rule 56
	','            reduce using rule 56
	'-'            reduce using rule 56
	'.'            reduce using rule 56
	'.)'           reduce using rule 56
	'/\\'          reduce using rule 56
	':'            reduce using rule 56
	'<'            reduce using rule 56
	'<='           reduce using rule 56
	'=='           reduce using rule 56
	'==='          reduce using rule 56
	'==>'          reduce using rule 56
	'>'            reduce using rule 56
	'>='           reduce using rule 56
	'\\/'          reduce using rule 56
	'div'          shift, and enter state 60
	'mod'          shift, and enter state 61
	%eof           reduce using rule 56


State 20

	Exp2 -> Exp3 .                                      (rule 61)

	'!='           reduce using rule 61
	')'            reduce using rule 61
	'*'            reduce using rule 61
	'+'            reduce using rule 61
	'++'           reduce using rule 61
	','            reduce using rule 61
	'-'            reduce using rule 61
	'.'            reduce using rule 61
	'.)'           reduce using rule 61
	'/\\'          reduce using rule 61
	':'            reduce using rule 61
	'<'            reduce using rule 61
	'<='           reduce using rule 61
	'=='           reduce using rule 61
	'==='          reduce using rule 61
	'==>'          reduce using rule 61
	'>'            reduce using rule 61
	'>='           reduce using rule 61
	'\\/'          reduce using rule 61
	'div'          reduce using rule 61
	'mod'          reduce using rule 61
	%eof           reduce using rule 61


State 21

	Exp3 -> '(' . Exp ')'                               (rule 68)

	'('            shift, and enter state 21
	'false'        shift, and enter state 22
	'neg'          shift, and enter state 23
	'nil'          shift, and enter state 24
	'true'         shift, and enter state 25
	L_integ        shift, and enter state 5
	L_DynVar       shift, and enter state 14

	Integer        goto state 15
	DynVar         goto state 16
	Exp            goto state 58
	Exp1           goto state 18
	Exp2           goto state 19
	Exp3           goto state 20

State 22

	Exp3 -> 'false' .                                   (rule 65)

	'!='           reduce using rule 65
	')'            reduce using rule 65
	'*'            reduce using rule 65
	'+'            reduce using rule 65
	'++'           reduce using rule 65
	','            reduce using rule 65
	'-'            reduce using rule 65
	'.'            reduce using rule 65
	'.)'           reduce using rule 65
	'/\\'          reduce using rule 65
	':'            reduce using rule 65
	'<'            reduce using rule 65
	'<='           reduce using rule 65
	'=='           reduce using rule 65
	'==='          reduce using rule 65
	'==>'          reduce using rule 65
	'>'            reduce using rule 65
	'>='           reduce using rule 65
	'\\/'          reduce using rule 65
	'div'          reduce using rule 65
	'mod'          reduce using rule 65
	%eof           reduce using rule 65


State 23

	Exp2 -> 'neg' . Exp3                                (rule 60)

	'('            shift, and enter state 21
	'false'        shift, and enter state 22
	'nil'          shift, and enter state 24
	'true'         shift, and enter state 25
	L_integ        shift, and enter state 5
	L_DynVar       shift, and enter state 14

	Integer        goto state 15
	DynVar         goto state 16
	Exp3           goto state 57

State 24

	Exp3 -> 'nil' .                                     (rule 66)

	'!='           reduce using rule 66
	')'            reduce using rule 66
	'*'            reduce using rule 66
	'+'            reduce using rule 66
	'++'           reduce using rule 66
	','            reduce using rule 66
	'-'            reduce using rule 66
	'.'            reduce using rule 66
	'.)'           reduce using rule 66
	'/\\'          reduce using rule 66
	':'            reduce using rule 66
	'<'            reduce using rule 66
	'<='           reduce using rule 66
	'=='           reduce using rule 66
	'==='          reduce using rule 66
	'==>'          reduce using rule 66
	'>'            reduce using rule 66
	'>='           reduce using rule 66
	'\\/'          reduce using rule 66
	'div'          reduce using rule 66
	'mod'          reduce using rule 66
	%eof           reduce using rule 66


State 25

	Exp3 -> 'true' .                                    (rule 64)

	'!='           reduce using rule 64
	')'            reduce using rule 64
	'*'            reduce using rule 64
	'+'            reduce using rule 64
	'++'           reduce using rule 64
	','            reduce using rule 64
	'-'            reduce using rule 64
	'.'            reduce using rule 64
	'.)'           reduce using rule 64
	'/\\'          reduce using rule 64
	':'            reduce using rule 64
	'<'            reduce using rule 64
	'<='           reduce using rule 64
	'=='           reduce using rule 64
	'==='          reduce using rule 64
	'==>'          reduce using rule 64
	'>'            reduce using rule 64
	'>='           reduce using rule 64
	'\\/'          reduce using rule 64
	'div'          reduce using rule 64
	'mod'          reduce using rule 64
	%eof           reduce using rule 64


State 26

	Pred4 -> DynVar .                                   (rule 43)
	Pred5 -> DynVar . '(.' ListPred '.)'                (rule 45)
	Exp3 -> DynVar .                                    (rule 63)
	Exp3 -> DynVar . '(' ListExp ')'                    (rule 67)

	'!='           reduce using rule 63
	'('            shift, and enter state 55
	'(.'           shift, and enter state 56
	')'            reduce using rule 63
			(reduce using rule 43)

	'*'            reduce using rule 63
	'+'            reduce using rule 63
	'++'           reduce using rule 63
	','            reduce using rule 43
	'-'            reduce using rule 63
	'.'            reduce using rule 43
	'.)'           reduce using rule 43
	'/\\'          reduce using rule 43
	':'            reduce using rule 63
	'<'            reduce using rule 63
	'<='           reduce using rule 63
	'=='           reduce using rule 63
	'==='          reduce using rule 43
	'==>'          reduce using rule 43
	'>'            reduce using rule 63
	'>='           reduce using rule 63
	'\\/'          reduce using rule 43
	'div'          reduce using rule 63
	'mod'          reduce using rule 63
	%eof           reduce using rule 43


State 27

	%start_pPred -> Pred .                              (rule 1)
	Pred -> Pred . '===' Pred1                          (rule 26)

	'==='          shift, and enter state 54
	%eof           accept


State 28

	Pred -> Pred1 .                                     (rule 27)

	')'            reduce using rule 27
	','            reduce using rule 27
	'.'            reduce using rule 27
	'.)'           reduce using rule 27
	'==='          reduce using rule 27
	%eof           reduce using rule 27


State 29

	Pred1 -> Pred2 . '==>' Pred1                        (rule 28)
	Pred1 -> Pred2 .                                    (rule 29)
	Pred2 -> Pred2 . '\\/' Pred3                        (rule 30)

	')'            reduce using rule 29
	','            reduce using rule 29
	'.'            reduce using rule 29
	'.)'           reduce using rule 29
	'==='          reduce using rule 29
	'==>'          shift, and enter state 52
	'\\/'          shift, and enter state 53
	%eof           reduce using rule 29


State 30

	Pred2 -> Pred3 .                                    (rule 31)
	Pred3 -> Pred3 . '/\\' Pred4                        (rule 32)

	')'            reduce using rule 31
	','            reduce using rule 31
	'.'            reduce using rule 31
	'.)'           reduce using rule 31
	'/\\'          shift, and enter state 51
	'==='          reduce using rule 31
	'==>'          reduce using rule 31
	'\\/'          reduce using rule 31
	%eof           reduce using rule 31


State 31

	Pred3 -> Pred4 .                                    (rule 34)

	')'            reduce using rule 34
	','            reduce using rule 34
	'.'            reduce using rule 34
	'.)'           reduce using rule 34
	'/\\'          reduce using rule 34
	'==='          reduce using rule 34
	'==>'          reduce using rule 34
	'\\/'          reduce using rule 34
	%eof           reduce using rule 34


State 32

	Pred4 -> Pred5 .                                    (rule 44)

	')'            reduce using rule 44
	','            reduce using rule 44
	'.'            reduce using rule 44
	'.)'           reduce using rule 44
	'/\\'          reduce using rule 44
	'==='          reduce using rule 44
	'==>'          reduce using rule 44
	'\\/'          reduce using rule 44
	%eof           reduce using rule 44


State 33

	Pred5 -> Pred6 .                                    (rule 46)

	')'            reduce using rule 46
	','            reduce using rule 46
	'.'            reduce using rule 46
	'.)'           reduce using rule 46
	'/\\'          reduce using rule 46
	'==='          reduce using rule 46
	'==>'          reduce using rule 46
	'\\/'          reduce using rule 46
	%eof           reduce using rule 46


State 34

	Pred4 -> Exp . '==' Exp                             (rule 35)
	Pred4 -> Exp . '!=' Exp                             (rule 36)
	Pred4 -> Exp . '<' Exp                              (rule 37)
	Pred4 -> Exp . '<=' Exp                             (rule 38)
	Pred4 -> Exp . '>' Exp                              (rule 39)
	Pred4 -> Exp . '>=' Exp                             (rule 40)

	'!='           shift, and enter state 45
	'<'            shift, and enter state 46
	'<='           shift, and enter state 47
	'=='           shift, and enter state 48
	'>'            shift, and enter state 49
	'>='           shift, and enter state 50


State 35

	Pred6 -> '(' . Pred ')'                             (rule 47)
	Exp3 -> '(' . Exp ')'                               (rule 68)

	'('            shift, and enter state 35
	'False'        shift, and enter state 36
	'True'         shift, and enter state 37
	'false'        shift, and enter state 22
	'neg'          shift, and enter state 23
	'nil'          shift, and enter state 24
	'true'         shift, and enter state 25
	'~'            shift, and enter state 38
	L_integ        shift, and enter state 5
	L_DynVar       shift, and enter state 14

	Integer        goto state 15
	DynVar         goto state 26
	Pred           goto state 43
	Pred1          goto state 28
	Pred2          goto state 29
	Pred3          goto state 30
	Pred4          goto state 31
	Pred5          goto state 32
	Pred6          goto state 33
	Exp            goto state 44
	Exp1           goto state 18
	Exp2           goto state 19
	Exp3           goto state 20

State 36

	Pred4 -> 'False' .                                  (rule 42)

	')'            reduce using rule 42
	','            reduce using rule 42
	'.'            reduce using rule 42
	'.)'           reduce using rule 42
	'/\\'          reduce using rule 42
	'==='          reduce using rule 42
	'==>'          reduce using rule 42
	'\\/'          reduce using rule 42
	%eof           reduce using rule 42


State 37

	Pred4 -> 'True' .                                   (rule 41)

	')'            reduce using rule 41
	','            reduce using rule 41
	'.'            reduce using rule 41
	'.)'           reduce using rule 41
	'/\\'          reduce using rule 41
	'==='          reduce using rule 41
	'==>'          reduce using rule 41
	'\\/'          reduce using rule 41
	%eof           reduce using rule 41


State 38

	Pred3 -> '~' . Pred4                                (rule 33)

	'('            shift, and enter state 35
	'False'        shift, and enter state 36
	'True'         shift, and enter state 37
	'false'        shift, and enter state 22
	'neg'          shift, and enter state 23
	'nil'          shift, and enter state 24
	'true'         shift, and enter state 25
	L_integ        shift, and enter state 5
	L_DynVar       shift, and enter state 14

	Integer        goto state 15
	DynVar         goto state 26
	Pred4          goto state 42
	Pred5          goto state 32
	Pred6          goto state 33
	Exp            goto state 34
	Exp1           goto state 18
	Exp2           goto state 19
	Exp3           goto state 20

State 39

	%start_pTheory -> Theory .                          (rule 0)

	%eof           accept


State 40

	Theory -> 'Theory' . DynVar '.' ListDynVar '.' ListItem    (rule 6)

	L_DynVar       shift, and enter state 14

	DynVar         goto state 41

State 41

	Theory -> 'Theory' DynVar . '.' ListDynVar '.' ListItem    (rule 6)

	'.'            shift, and enter state 101


State 42

	Pred3 -> '~' Pred4 .                                (rule 33)

	')'            reduce using rule 33
	','            reduce using rule 33
	'.'            reduce using rule 33
	'.)'           reduce using rule 33
	'/\\'          reduce using rule 33
	'==='          reduce using rule 33
	'==>'          reduce using rule 33
	'\\/'          reduce using rule 33
	%eof           reduce using rule 33


State 43

	Pred -> Pred . '===' Pred1                          (rule 26)
	Pred6 -> '(' Pred . ')'                             (rule 47)

	')'            shift, and enter state 100
	'==='          shift, and enter state 54


State 44

	Pred4 -> Exp . '==' Exp                             (rule 35)
	Pred4 -> Exp . '!=' Exp                             (rule 36)
	Pred4 -> Exp . '<' Exp                              (rule 37)
	Pred4 -> Exp . '<=' Exp                             (rule 38)
	Pred4 -> Exp . '>' Exp                              (rule 39)
	Pred4 -> Exp . '>=' Exp                             (rule 40)
	Exp3 -> '(' Exp . ')'                               (rule 68)

	'!='           shift, and enter state 45
	')'            shift, and enter state 85
	'<'            shift, and enter state 46
	'<='           shift, and enter state 47
	'=='           shift, and enter state 48
	'>'            shift, and enter state 49
	'>='           shift, and enter state 50


State 45

	Pred4 -> Exp '!=' . Exp                             (rule 36)

	'('            shift, and enter state 21
	'false'        shift, and enter state 22
	'neg'          shift, and enter state 23
	'nil'          shift, and enter state 24
	'true'         shift, and enter state 25
	L_integ        shift, and enter state 5
	L_DynVar       shift, and enter state 14

	Integer        goto state 15
	DynVar         goto state 16
	Exp            goto state 99
	Exp1           goto state 18
	Exp2           goto state 19
	Exp3           goto state 20

State 46

	Pred4 -> Exp '<' . Exp                              (rule 37)

	'('            shift, and enter state 21
	'false'        shift, and enter state 22
	'neg'          shift, and enter state 23
	'nil'          shift, and enter state 24
	'true'         shift, and enter state 25
	L_integ        shift, and enter state 5
	L_DynVar       shift, and enter state 14

	Integer        goto state 15
	DynVar         goto state 16
	Exp            goto state 98
	Exp1           goto state 18
	Exp2           goto state 19
	Exp3           goto state 20

State 47

	Pred4 -> Exp '<=' . Exp                             (rule 38)

	'('            shift, and enter state 21
	'false'        shift, and enter state 22
	'neg'          shift, and enter state 23
	'nil'          shift, and enter state 24
	'true'         shift, and enter state 25
	L_integ        shift, and enter state 5
	L_DynVar       shift, and enter state 14

	Integer        goto state 15
	DynVar         goto state 16
	Exp            goto state 97
	Exp1           goto state 18
	Exp2           goto state 19
	Exp3           goto state 20

State 48

	Pred4 -> Exp '==' . Exp                             (rule 35)

	'('            shift, and enter state 21
	'false'        shift, and enter state 22
	'neg'          shift, and enter state 23
	'nil'          shift, and enter state 24
	'true'         shift, and enter state 25
	L_integ        shift, and enter state 5
	L_DynVar       shift, and enter state 14

	Integer        goto state 15
	DynVar         goto state 16
	Exp            goto state 96
	Exp1           goto state 18
	Exp2           goto state 19
	Exp3           goto state 20

State 49

	Pred4 -> Exp '>' . Exp                              (rule 39)

	'('            shift, and enter state 21
	'false'        shift, and enter state 22
	'neg'          shift, and enter state 23
	'nil'          shift, and enter state 24
	'true'         shift, and enter state 25
	L_integ        shift, and enter state 5
	L_DynVar       shift, and enter state 14

	Integer        goto state 15
	DynVar         goto state 16
	Exp            goto state 95
	Exp1           goto state 18
	Exp2           goto state 19
	Exp3           goto state 20

State 50

	Pred4 -> Exp '>=' . Exp                             (rule 40)

	'('            shift, and enter state 21
	'false'        shift, and enter state 22
	'neg'          shift, and enter state 23
	'nil'          shift, and enter state 24
	'true'         shift, and enter state 25
	L_integ        shift, and enter state 5
	L_DynVar       shift, and enter state 14

	Integer        goto state 15
	DynVar         goto state 16
	Exp            goto state 94
	Exp1           goto state 18
	Exp2           goto state 19
	Exp3           goto state 20

State 51

	Pred3 -> Pred3 '/\\' . Pred4                        (rule 32)

	'('            shift, and enter state 35
	'False'        shift, and enter state 36
	'True'         shift, and enter state 37
	'false'        shift, and enter state 22
	'neg'          shift, and enter state 23
	'nil'          shift, and enter state 24
	'true'         shift, and enter state 25
	L_integ        shift, and enter state 5
	L_DynVar       shift, and enter state 14
